# statzone

./: .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  README.md  TODO  go.mod  go.sum  statzone.1  statzone.go
.github/workflows/: build.yaml  codeql.yaml
compat/: compat.h  compat.hpp
man/: statzone.1
src/: config.h  config.hpp  seccomp.h  seccomp.hpp  statzone.c  statzone.cpp  strtolower.c  strtolower.cpp  strtolower.h  strtolower.hpp
tests/: arpa.zone
